Assessment: overwrite uploaded assessments in place instead of deleting them
An uploaded manual assessment used to be stored by deleting the existing
manual result (plus the ratings and participant-score references Hibernate
cannot cascade) and creating a new one. Two native FOR UPDATE queries were
needed to keep a concurrent complaint from slipping between the complaint
check and that deletion.

Edit the existing manual result instead: score, feedback, assessor and
completion date are replaced while the result itself is kept, so ratings,
participant scores and complaints keep referring to a valid assessment and
the @PostUpdate ResultListener recomputes the participant scores, exactly as
it does for an assessment edited in the assessment editor. Nothing is deleted
any more, which removes the need for both locks, both native queries and the
reference cleanup; the bulk rating and participant-score queries move to the
test layer, which is now their only user.

Participations whose current assessment has an open complaint are still
rejected, now because overwriting would change the assessment the student is
contesting rather than because it would delete the complaint.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>