@@ -1,7 +1,6 @@
 package de.tum.cit.aet.artemis.assessment.service;
 
 import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 import java.util.Collections;
 import java.util.List;
@@ -10,7 +9,7 @@ import java.util.Set;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 
-import de.tum.cit.aet.artemis.assessment.repository.ParticipantScoreRepository;
+import de.tum.cit.aet.artemis.assessment.domain.Result;
 import de.tum.cit.aet.artemis.assessment.util.AssessmentUploadResultTestService;
 import de.tum.cit.aet.artemis.shared.base.AbstractSpringIntegrationIndependentBatchTest;
 
@@ -20,21 +19,19 @@ class AssessmentUploadResultServiceTest extends AbstractSpringIntegrationIndepen
     private AssessmentUploadResultService assessmentUploadResultService;
 
     @Autowired
-    private ParticipantScoreRepository participantScoreRepository;
-
-    @Autowired
     private AssessmentUploadResultTestService assessmentUploadResultTestService;
 
     @Test
     void shouldRejectInvalidResultParameters() {
-        assertThatIllegalArgumentException().isThrownBy(() -> assessmentUploadResultService.createNewManualResults(null, true));
-        assertThatIllegalArgumentException().isThrownBy(() -> assessmentUploadResultService.createNewManualResults(Collections.singletonList(null), true));
+        assertThatIllegalArgumentException().isThrownBy(() -> assessmentUploadResultService.saveManualResults(null, List.of(), true));
+        assertThatIllegalArgumentException().isThrownBy(() -> assessmentUploadResultService.saveManualResults(List.of(), null, true));
+        assertThatIllegalArgumentException().isThrownBy(() -> assessmentUploadResultService.saveManualResults(Collections.singletonList(null), List.of(), true));
+        assertThatIllegalArgumentException().isThrownBy(() -> assessmentUploadResultService.saveManualResults(List.of(), Collections.singletonList(null), true));
+        // An updated result must already be persisted, otherwise the in-place overwrite would silently create a second assessment.
+        assertThatIllegalArgumentException().isThrownBy(() -> assessmentUploadResultService.saveManualResults(List.of(), List.of(new Result()), true));
         assertThatIllegalArgumentException().isThrownBy(() -> assessmentUploadResultTestService.deleteResultsByIds(null));
         assertThatIllegalArgumentException().isThrownBy(() -> assessmentUploadResultTestService.deleteResultsByIds(List.of()));
         assertThatIllegalArgumentException().isThrownBy(() -> assessmentUploadResultTestService.deleteManualResults(0, Set.of(1L)));
         assertThatIllegalArgumentException().isThrownBy(() -> assessmentUploadResultTestService.deleteManualResults(1, Set.of()));
-        // Spring's repository exception translator wraps the IllegalArgumentException thrown by default repository methods.
-        assertThatThrownBy(() -> participantScoreRepository.clearAllByResultIds(null)).hasRootCauseInstanceOf(IllegalArgumentException.class);
-        assertThatThrownBy(() -> participantScoreRepository.clearAllByResultIds(Set.of())).hasRootCauseInstanceOf(IllegalArgumentException.class);
     }
 }
